--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "First CH5 Program",
   "main": "index.html",
   "scripts": {
-    "build:archive": "ch5-cli archive -p FirstCh -d . -o tsw",
+    "start": "parcel index.html",
+    "build": "parcel build index.html --public-url .",
+    "build:archive": "ch5-cli archive -p FirstCh -d dist -o tsw",
     "build:deploy": "ch5-cli deploy -H 192.168.0.147 -t touchscreen -p ./tsw/FirstCh.ch5z ",
-    "build:all": "rm tsw -r && npm run build:archive && npm run build:deploy"
+    "build:all": "rm tsw -rf && npm run build && npm run build:archive && npm run build:deploy"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,10 @@
   },
   "homepage": "https://github.com/DGI-Technologies/FirstCH#readme",
   "dependencies": {
-    "@crestron/ch5-crcomlib": "^0.0.4",
+    "@crestron/ch5-crcomlib":"^1.1.0",
     "@crestron/ch5-theme": "^1.0.0"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
   }
 }
